--- a/domain.yml
+++ b/domain.yml
@@ -77,7 +77,7 @@ responses:
   utter_please_rephrase:
     - text: I'm sorry, I didn't quite understand that. Could you rephrase? 🥺
   utter_out_of_scope:
-    - text: Sorry, I can't handle that request. 😔
+    - text: Sorry, I can't handle it. 😔
   utter_ask_where_info:
     - text: If you told me where, I dont understand it, or it is out of my scope of localizations. Do you want to know the weather from where? 🌎
   utter_ask_when_info:
