update telegram chatbot token

--- a/credentials.yml
+++ b/credentials.yml
@@ -7,7 +7,7 @@ rest:
 #  # require any credentials
 
 telegram:
-  access_token: "1855134841:AAGzYp2Bzpa0lIePEnD02SyDAX5qSvZznnM"
+  access_token: "TELEGRAM_TOKEN"
   verify: "PlnWeathetBot"
   webhook_url: "https://8d6ad8c6a9af.ngrok.io/webhooks/telegram/webhook"
 
